<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_soundprofile"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinnerSound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/settings_soundprofile" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_exerciseinterval"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinnerExerciseInterval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/settings_exerciseinterval" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_resttime"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinnerRestInterval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/settings_resttime" />

</LinearLayout>